# TashanStone

./: .env.template  .gitignore  .opencode.json  AGENTS.md  AUTH_API_REFERENCE.md  App.tsx  CHANGELOG.md  FRONTEND_FIXES_SUMMARY.md  IMPLEMENTATION_REPORT_PHASE_2.1.md  PHASE8_INTEGRATION_GUIDE.md  README.md  TOOL_CALL_INTEGRATION.md  electron-builder.yml  index.html  index.tsx  opencode.json  package-lock.json  package.json  playwright.config.ts  test-sherpa-node.cjs  test-sherpa.cjs  tsconfig.json  types.d.ts  types.d.ts.map  types.js  types.js.map  types.ts  vite.config.ts  vitest.config.ts  weather_info.txt
.claude/: settings.json  settings.local.json
.codex/: config.toml  gsd-file-manifest.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.memories/: _memories_index.json  memory_2025-12-29_ceshi_p6xtib.md  memory_2025-12-29_test-1_nrm81w.md  memory_2025-12-29_test-2_w8xgk9.md
.opencode/: AGENTS.md  antigravity.json  oh-my-opencode.json  opencode.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
New_Features/: App.tsx  index.html
components/: AISettingsModal.tsx  AnalyticsDashboard.tsx  BacklinkPanel.tsx  ChatPanel.tsx  (+36 more)
tui-notebook/: .gitignore  Cargo.toml  MD_RENDER_TEST.md  USER_GUIDE.md  new_file.md
tui-notebook/.github/workflows/: ci.yml
tui-notebook/src/: action.rs  app.rs  i18n.rs  lib.rs  main.rs  theme.rs  tui.rs
tui-notebook/src/components/: chat.rs  confirm.rs  editor.rs  graph_explorer.rs  knowledge.rs  mod.rs  new_file.rs  search.rs  settings.rs  sidebar.rs  status.rs
tui-notebook/src/models/: document.rs  mod.rs  notebook.rs
tui-notebook/src/services/: ai.rs  clipboard.rs  config.rs  learning.rs  mod.rs  storage.rs  vector.rs  workspace.rs
tui-notebook/tests/: test_ai_streaming.rs  test_chat_panel.rs  test_learning.rs
(+606 files in other folders)
