[package]
name = "tui-notebook"
version = "0.1.0"
edition = "2021"
description = "A complete TUI notebook application with Markdown editing, AI chat, and knowledge management"
license = "MIT"
authors = ["TashanStone"]

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["default", "crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-image = { version = "8.0.2", default-features = false, features = ["image-defaults", "crossterm"] }
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Text editing
ratatui-textarea = "0.8"
ropey = "1"

# Markdown parsing
pulldown-cmark = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client for AI APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async utilities
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
unicode-width = "0.1"
unicode-segmentation = "1.10"
copypasta = "0.8"

# Syntax highlighting (using simple text-based highlighting)
syntect = "5"
regex = "1"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }

[[bin]]
name = "tui-notebook"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
